--- a/libs/core/cms-layout/ui/footer/src/lib/core-cms-layout-ui-footer.component.html
+++ b/libs/core/cms-layout/ui/footer/src/lib/core-cms-layout-ui-footer.component.html
@@ -1,4 +1,4 @@
-<footer class="text-white bg-primary p-sm">
+<footer class="text-white p-sm bg-primary">
   <div class="text-center justify-self-center">
     <ng-content select="[content]"></ng-content>
   </div>
