--- a/libs/core/styles/util/material/src/_input.scss
+++ b/libs/core/styles/util/material/src/_input.scss
@@ -1,4 +1,3 @@
-.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field
-  .mdc-notched-outline__notch {
-  @apply border-l-0 border-r-0;
+.mdc-text-field--outlined:not(.mdc-text-field--disabled) .mat-mdc-form-field-flex .mdc-notched-outline .mdc-notched-outline__notch {
+  border-right-width: var(--plastik-outlined-text-field-border-left-width);
 }
