--- a/libs/shared/activity/ui/src/lib/shared-activity-ui-linear/shared-activity-ui-linear.component.html
+++ b/libs/shared/activity/ui/src/lib/shared-activity-ui-linear/shared-activity-ui-linear.component.html
@@ -1,3 +1,5 @@
 <div class="motion-reduce:hidden">
-  <mat-progress-bar *ngIf="active" [mode]="mode"></mat-progress-bar>
+  @if (active) {
+    <mat-progress-bar [mode]="mode"></mat-progress-bar>
+  }
 </div>
