--- a/libs/shared/form/feature/src/lib/shared-form-feature.component.html
+++ b/libs/shared/form/feature/src/lib/shared-form-feature.component.html
@@ -17,16 +17,10 @@
 
   <!-- buttons -->
   <div class="mt-6 max-height-flex">
-    <button
-      *ngIf="submitAvailable"
-      mat-flat-button
-      color="primary"
-      type="submit"
-      class="h-[56px] w-[150px]"
-      data-test="submit-button"
-      [disabled]="!form.valid"
-    >
-      Submit
-    </button>
+    @if (submitAvailable) {
+      <button mat-flat-button color="primary" type="submit" class="h-[56px] w-[150px]" data-test="submit-button" [disabled]="!form.valid">
+        Submit
+      </button>
+    }
   </div>
 </form>
