--- a/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
+++ b/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
@@ -1,6 +1,8 @@
-<h2 *ngIf="routeInfo$ | ngrxPush as info" class="flex items-center gap-sm h3" data-test="page-title">
-  <mat-icon> {{ info?.icon }} </mat-icon> <span>{{ info?.title }}</span>
-</h2>
+@if (routeInfo$ | ngrxPush; as info) {
+  <h2 class="flex items-center gap-sm h3" data-test="page-title">
+    <mat-icon> {{ info?.icon }} </mat-icon> <span>{{ info?.title }}</span>
+  </h2>
+}
 
 <section>
   <!-- filtering -->
@@ -24,17 +26,21 @@
     [paginationVisibility]="obs.tableStructure.paginationVisibility"
     (changePagination)="onChangePagination($event)"
   >
-    <plastik-nasa-images-search-ui-no-results *ngIf="obs.isActiveSearch" noResults>
-      <span icon> search_off </span>
-      <span title>No results found</span>
-      <span message>We can't find any item matching your search.</span>
-    </plastik-nasa-images-search-ui-no-results>
+    @if (obs.isActiveSearch) {
+      <plastik-nasa-images-search-ui-no-results noResults>
+        <span icon> search_off </span>
+        <span title>No results found</span>
+        <span message>We can't find any item matching your search.</span>
+      </plastik-nasa-images-search-ui-no-results>
+    }
 
-    <plastik-nasa-images-search-ui-no-results *ngIf="!obs.isActiveSearch" noValidSearch>
-      <span icon> search_on </span>
-      <span title>NASA images search</span>
-      <span message>Use the filter to find related NASA pictures.<br />You must provide a valid matching string.</span>
-    </plastik-nasa-images-search-ui-no-results>
+    @if (!obs.isActiveSearch) {
+      <plastik-nasa-images-search-ui-no-results noValidSearch>
+        <span icon> search_on </span>
+        <span title>NASA images search</span>
+        <span message>Use the filter to find related NASA pictures.<br />You must provide a valid matching string.</span>
+      </plastik-nasa-images-search-ui-no-results>
+    }
 
     <ng-template #noValidSearch> </ng-template>
   </plastik-shared-table>
