--- a/libs/shared/button/ui/src/lib/shared-button-ui/shared-button-ui.component.html
+++ b/libs/shared/button/ui/src/lib/shared-button-ui/shared-button-ui.component.html
@@ -1,38 +1,33 @@
-<button
-  *ngIf="config.type === 'button'"
-  mat-button
-  class="button--rounded"
-  [ngClass]="config.classes || {}"
-  [disabled]="config.disabled"
-  [attr.aria-label]="config.ariaLabel"
-  [attr.data-test]="config.dataTestId"
-  (click)="onClick()"
->
-  <ng-container *ngTemplateOutlet="content"></ng-container>
-</button>
+@if (config.type === 'button') {
+  <button
+    mat-button
+    class="button--rounded"
+    [ngClass]="config.classes || {}"
+    [disabled]="config.disabled"
+    [attr.aria-label]="config.ariaLabel"
+    [attr.data-test]="config.dataTestId"
+    (click)="onClick()"
+  >
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </button>
+}
 
-<a
-  *ngIf="config.type === 'link'"
-  class="block"
-  target="_blank"
-  [attr.aria-label]="config.ariaLabel"
-  [href]="config.link"
-  [attr.data-test]="config.dataTestId"
->
-  <ng-container *ngTemplateOutlet="content">button content</ng-container>
-</a>
+@if (config.type === 'link') {
+  <a class="block" target="_blank" [attr.aria-label]="config.ariaLabel" [href]="config.link" [attr.data-test]="config.dataTestId">
+    <ng-container *ngTemplateOutlet="content">button content</ng-container>
+  </a>
+}
 
 <ng-template #content>
-  <ng-container *ngFor="let element of config.elements; index as i; trackBy: trackButtonsContent">
-    <ng-container *ngIf="element.type === 'text'">
+  @for (element of config.elements; track $index) {
+    @if (element.type === 'text') {
       <span>{{ element.content | returnAsObservable | ngrxPush }}</span>
-    </ng-container>
-
-    <ng-container *ngIf="element.type === 'icon'">
+    }
+    @if (element.type === 'icon') {
       <svg-icon
         [src]="(element.content | returnAsObservable | ngrxPush)?.iconPath || ''"
         [svgClass]="(element.content | returnAsObservable | ngrxPush)?.svgClass || ''"
       ></svg-icon>
-    </ng-container>
-  </ng-container>
+    }
+  }
 </ng-template>
