feat(llecoop): #265 add main layout structure for llecoop app
ISSUES CLOSED: #265

--- a/apps/llecoop/src/app/app.component.html
+++ b/apps/llecoop/src/app/app.component.html
@@ -1,1 +1,1 @@
-<llecoop-nx-welcome></llecoop-nx-welcome> <router-outlet></router-outlet>
+<plastik-core-cms-layout-feature [hideFooter]="true"></plastik-core-cms-layout-feature>
