--- a/apps/llecoop/src/styles/_material.scss
+++ b/apps/llecoop/src/styles/_material.scss
@@ -5,17 +5,17 @@
 
 @include mat.core();
 
-$theme: mat.define-light-theme(
+$theme: mat.m2-define-light-theme(
   (
     color: (
-      primary: mat.define-palette(palette.$md-primary, 500, 100, 700),
-      accent: mat.define-palette(palette.$md-accent, A200, A100, A400),
-      warn: mat.define-palette(palette.$md-warn),
+      primary: mat.m2-define-palette(palette.$md-primary, 500, 100, 700),
+      accent: mat.m2-define-palette(palette.$md-accent, A200, A100, A400),
+      warn: mat.m2-define-palette(palette.$md-warn),
     ),
     typography:
-      mat.define-typography-config(
+      mat.m2-define-typography-config(
         $font-family: var(--sans-serif),
-        $body-1: mat.define-typography-level(var(--font-size-base), var(--spacing-md), 400),
+        $body-1: mat.m2-define-typography-level(var(--font-size-base), var(--spacing-md), 400),
       ),
   )
 );
@@ -25,7 +25,7 @@ $merged-theme: map.deep-merge(
   (
     color: (
       background: (
-        background: mat.get-color-from-palette(palette.$md-primary, 50),
+        background: mat.m2-get-color-from-palette(palette.$md-primary, 50),
       ),
     ),
   )
