feat(llecoop/category): #269 add categories table list view
ISSUES CLOSED: #269

--- a/apps/llecoop/src/styles/_theme.scss
+++ b/apps/llecoop/src/styles/_theme.scss
@@ -55,5 +55,9 @@
     --font-size-lg: var(--h4);
     --font-size-xl: var(--h3);
     --font-size-xxl: var(--h2);
+
+    /* Table */
+    --plastik-mdc-table-row-min-height: 40px;
+    --plastik-mdc-table-row-max-height: 160px;
   }
 }
