--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -1,36 +1,56 @@
-<div class="block mt-0 overflow-auto border-t border-solid md:mt-4 border-gray-10">
+<div class="block mt-0 overflow-auto border-t border-solid md:mt-4 border-gray-10 table-wrapper">
   @if (!!dataSource.data.length) {
-    <div>
-      <mat-table class="table w-full table-fixed" [dataSource]="dataSource" [attr.aria-label]="caption">
-        @for (column of columnProperties; track $index) {
-          <ng-container [matColumnDef]="column.key" [sticky]="column.sticky">
-            <mat-header-cell *matHeaderCellDef [ngClass]="column.cssClasses?.[0] || ''">
-              {{ column.title }}
-            </mat-header-cell>
-            <mat-cell *matCellDef="let row; let i = index" [ngClass]="column.cssClasses?.[0] || ''">
-              <div [ngClass]="column.cssClasses?.[1] || ''" [innerHTML]="row | safeFormatted: column : i + 1 : pagination"></div>
-            </mat-cell>
-          </ng-container>
-        }
-        <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns" class="even:bg-gray-5/20 odd:bg-white"></mat-row>
-      </mat-table>
-      <mat-paginator
-        #matPaginator
-        [hidePageSize]="paginationVisibility?.hidePageSize"
-        [length]="resultsLength"
-        [ngClass]="{
-          'paginator--hide': paginationVisibility?.hideRangeLabel,
-          'paginator--hide-range-buttons': paginationVisibility?.hideRangeButtons
-        }"
-        [pageIndex]="pagination?.pageIndex"
-        [pageSize]="pagination?.pageSize"
-        [pageSizeOptions]="pageSizeOptions"
-        [showFirstLastButtons]="!paginationVisibility?.hidePaginationFirstLastButtons"
-        (page)="onChangePagination($event)"
-      >
-      </mat-paginator>
-    </div>
+    <mat-table
+      class="table w-full table-fixed"
+      matSort
+      matSortDisableClear
+      [dataSource]="dataSource"
+      [attr.aria-label]="caption"
+      (matSortChange)="onChangeSorting($event)"
+    >
+      @if (caption) {
+        <caption class="sr-only">
+          {{
+            caption
+          }}
+        </caption>
+      }
+
+      @for (column of columnProperties; track column.key) {
+        <ng-container [matColumnDef]="column.key" [sticky]="column.sticky">
+          <mat-header-cell
+            *matHeaderCellDef
+            [mat-sort-header]="column.key"
+            [disabled]="!column.sorting"
+            [ngClass]="column.cssClasses?.[0] || ''"
+          >
+            {{ column.title }}
+          </mat-header-cell>
+
+          <mat-cell *matCellDef="let row; let i = index" [ngClass]="column.cssClasses?.[0] || ''">
+            <div [ngClass]="column.cssClasses?.[1] || ''" [innerHTML]="row | safeFormatted: column : i + 1 : pagination"></div>
+          </mat-cell>
+        </ng-container>
+      }
+      <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns" class="even:bg-gray-5/20 odd:bg-white"></mat-row>
+    </mat-table>
+
+    <mat-paginator
+      #matPaginator
+      [hidePageSize]="paginationVisibility?.hidePageSize"
+      [length]="resultsLength"
+      [ngClass]="{
+        'paginator--hide': paginationVisibility?.hideRangeLabel,
+        'paginator--hide-range-buttons': paginationVisibility?.hideRangeButtons,
+      }"
+      [pageIndex]="pagination?.pageIndex"
+      [pageSize]="pagination?.pageSize"
+      [pageSizeOptions]="pageSizeOptions"
+      [showFirstLastButtons]="!paginationVisibility?.hidePaginationFirstLastButtons"
+      (page)="onChangePagination($event)"
+    >
+    </mat-paginator>
   } @else {
     <ng-content select="[noResults]"></ng-content>
     <ng-content select="[noValidSearch]"></ng-content>
