--- a/apps/llecoop/src/app/app.component.html
+++ b/apps/llecoop/src/app/app.component.html
@@ -1,1 +1,1 @@
-<plastik-core-cms-layout-feature [hideFooter]="true"></plastik-core-cms-layout-feature>
+<plastik-core-cms-layout-feature></plastik-core-cms-layout-feature>
