--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -76,7 +76,7 @@
   @if (!hideFooter) {
     <plastik-core-cms-layout-ui-footer data-test="layout-footer">
       <div content class="flex items-center justify-center gap-sm">
-        <svg-icon svgClass="fill-white w-xl h-xl" src="/assets/svg/plastikaweb.svg"></svg-icon>
+        <svg-icon svgClass="fill-white w-lg h-lg" src="/assets/svg/plastikaweb.svg"></svg-icon>
         <div class="flex flex-row gap-[4px]">
           <div>
             © 2006-{{ currentDate | date: 'yyyy' }}
@@ -88,7 +88,7 @@
               >Plastikaweb</a
             >
           </div>
-          <span class="hidden sm:block">| Carlos Matheu | FrontEnd Freelancer.</span>
+          <span class="hidden sm:block">| Carlos Matheu.</span>
         </div>
       </div>
     </plastik-core-cms-layout-ui-footer>
