--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.scss
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.scss
@@ -1,3 +1,34 @@
+::ng-deep .table-wrapper {
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: grid;
+  width: 100%;
+  margin-bottom: 1rem;
+
+  .mdc-data-table__table {
+    min-width: auto;
+  }
+
+  .mat-mdc-header-cell {
+    font-weight: bold;
+    white-space: nowrap;
+
+    > .mat-sort-header-container {
+      white-space: pre-wrap;
+      word-break: normal;
+      min-width: 5rem;
+    }
+  }
+
+  .mat-mdc-cell:not(.mat-cell-actions) * {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
+    transition: 0.2s;
+    padding: 0.35em 0;
+  }
+}
 .mat-mdc-table > .mat-mdc-row {
   @apply items-stretch;
   min-height: var(--plastik-mdc-table-row-min-height, auto);
@@ -8,7 +39,7 @@
   @apply cursor-pointer;
 }
 
-:host ::ng-deep .mat-mdc-paginator {
+::ng-deep .mat-mdc-paginator {
   &.paginator--hide .mat-paginator-range-label {
     @apply hidden;
   }
