feat(llecoop): #286 add sorting to name column in categories view table
ISSUES CLOSED: #286

--- a/libs/shared/layouts/feature/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/shared/layouts/feature/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -5,6 +5,8 @@
   [caption]="facade.tableStructure().caption || ''"
   [columnProperties]="facade.tableStructure().columnProperties || []"
   [resultsLength]="facade.count() || 0"
+  [sort]="facade.tableStructure().sort"
   [pageSizeOptions]="facade.tableStructure().pageSizeOptions || []"
-  [paginationVisibility]="facade.tableStructure().paginationVisibility">
+  [paginationVisibility]="facade.tableStructure().paginationVisibility"
+  (changeSorting)="onChangeSorting($event)">
 </plastik-shared-table>
