--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -6,8 +6,9 @@
       matSortDisableClear
       [dataSource]="dataSource"
       [attr.aria-label]="caption"
-      (matSortChange)="onChangeSorting($event)"
-    >
+      [matSortActive]="matSort?.active || ''"
+      [matSortDirection]="matSort?.direction || 'asc'"
+      (matSortChange)="onChangeSorting($event)">
       @if (caption) {
         <caption class="sr-only">
           {{
@@ -22,22 +23,26 @@
             *matHeaderCellDef
             [mat-sort-header]="column.key"
             [disabled]="!column.sorting"
-            [ngClass]="column.cssClasses?.[0] || ''"
-          >
+            [ngClass]="column.cssClasses?.[0] || ''">
             {{ column.title }}
           </mat-header-cell>
 
           <mat-cell *matCellDef="let row; let i = index" [ngClass]="column.cssClasses?.[0] || ''">
-            <div [ngClass]="column.cssClasses?.[1] || ''" [innerHTML]="row | safeFormatted: column : i + 1 : pagination"></div>
+            <div
+              [ngClass]="column.cssClasses?.[1] || ''"
+              [innerHTML]="row | safeFormatted: column : i + 1 : pagination"></div>
           </mat-cell>
         </ng-container>
       }
       <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns" class="even:bg-gray-5/20 odd:bg-white"></mat-row>
+      <mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        class="even:bg-gray-5/20 odd:bg-white"></mat-row>
     </mat-table>
 
     <mat-paginator
       #matPaginator
+      class="mt-md"
       [hidePageSize]="paginationVisibility?.hidePageSize"
       [length]="resultsLength"
       [ngClass]="{
@@ -48,8 +53,7 @@
       [pageSize]="pagination?.pageSize"
       [pageSizeOptions]="pageSizeOptions"
       [showFirstLastButtons]="!paginationVisibility?.hidePaginationFirstLastButtons"
-      (page)="onChangePagination($event)"
-    >
+      (page)="onChangePagination($event)">
     </mat-paginator>
   } @else {
     <ng-content select="[noResults]"></ng-content>
